--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head></head>
-<body> Hello! </body>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
+  
+  </body>
 </html>
